--- a/data/sources/asociace-ux.yaml
+++ b/data/sources/asociace-ux.yaml
@@ -41383,10 +41383,10 @@ series:
         dtend: 2023-02-27 20:30:00+01:00
   - meetupcom:
       meta_description: UX dinner is a meeting of the UX community in Brno. You can expect a short presentation by [Gabriela Véghová](https://www.linkedin.com/in/ACoAAAsUgb4BEZaMbwaV0wdnhgsO5svOld
-      og_title: UX Dinner Brno in March , Mon, Mar 27, 2023, 5:30 PM   | Meetup
+      og_title: 'UX Dinner Brno in March _ Topic: Speed in design, Mon, Mar 27, 2023, 5:30 PM   | Meetup'
       url: https://www.meetup.com/asociace-ux/events/292005028/
       ical:
-        summary: 'UX Dinner Brno in March '
+        summary: 'UX Dinner Brno in March _ Topic: Speed in design'
         description: 'Asociace UX
 
           Monday, March 27 at 5:30 PM
@@ -41647,3 +41647,27 @@ series:
         url: https://www.meetup.com/asociace-ux/events/292066308/
         dtstart: 2023-03-14 10:00:00+01:00
         dtend: 2023-03-14 13:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: 'UX Monday: Budoucnost Asociace UX aneb představení kandidátů'
+        description: 'Asociace UX
+
+          Monday, March 6 at 6:00 PM
+
+
+          *S radostí zveme všechny členy i nečleny Asociace UX na příští UX Monday, které bude unikátní hned v několika ohledech.* Hybným tématem budou nadcháze...
+
+
+          https://www.meetup.com/asociace-ux/events/291919857/'
+        location: Salsita Club (Štefánikova 25, Praha 5-Smíchov, Czech Republic 150 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_291919857@meetup.com
+        url: https://www.meetup.com/asociace-ux/events/291919857/
+        dtstart: 2023-03-06 18:00:00+01:00
+        dtend: 2023-03-06 20:00:00+01:00
