--- a/data/sources/praguejs.yaml
+++ b/data/sources/praguejs.yaml
@@ -675,3 +675,29 @@ series:
         url: https://www.meetup.com/praguejs/events/291033365/
         dtstart: 2023-02-23 18:30:00+01:00
         dtend: 2023-02-23 20:30:00+01:00
+  - meetupcom:
+      meta_description: 'Get out and get social in 2023 : come out and discuss JS together!
+
+        Get in touch with the organizers with any questions you have. We welcome a diverse range of topics that a'
+      og_title: '2023 #3 Key Strategies for Managing a Software Development Team, Thu, Mar 23, 2023, 6:30 PM   | Meetup'
+      url: https://www.meetup.com/praguejs/events/289943958/
+      ical:
+        summary: '2023 #3 Key Strategies for Managing a Software Development Team'
+        description: 'PragueJS
+
+          Thursday, March 23 at 6:30 PM
+
+
+          Get out and get social in 2023 : come out and discuss JS together!Get in touch with the organizers with any questions you have. We welcome a diverse r...
+
+
+          https://www.meetup.com/praguejs/events/289943958/'
+        location: WORLD HUB coworking meeting bookstore (Slovenská 1705, Vinohrady, Praha-Praha 2, Czech Republic 120 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_289943958@meetup.com
+        url: https://www.meetup.com/praguejs/events/289943958/
+        dtstart: 2023-03-23 18:30:00+01:00
+        dtend: 2023-03-23 20:30:00+01:00
