--- a/data/sources/czskppug.yaml
+++ b/data/sources/czskppug.yaml
@@ -28534,9 +28534,9 @@ series:
         dtstart: 2023-02-09 17:00:00+01:00
         dtend: 2023-02-09 19:00:00+01:00
   - meetupcom:
-      meta_description: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p
-      og_title: CZSK PPUG Meetup, Thu, Mar 9, 2023, 5:00 PM   | Meetup
-      url: https://www.meetup.com/czskppug/events/290709864/
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
       ical:
         summary: CZSK PPUG Meetup
         description: 'Czech and Slovak Power Platform User Group
@@ -33093,3 +33093,27 @@ series:
         url: https://www.meetup.com/czskppug/events/290709857/
         dtstart: 2023-02-09 17:00:00+01:00
         dtend: 2023-02-09 19:00:00+01:00
+  - meetupcom:
+      meta_description: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p
+      og_title: CZSK PPUG Meetup, Thu, Jul 13, 2023, 5:00 PM   | Meetup
+      url: https://www.meetup.com/czskppug/events/290709907/
+      ical:
+        summary: CZSK PPUG Meetup
+        description: 'Czech and Slovak Power Platform User Group
+
+          Thursday, July 13 at 5:00 PM
+
+
+          Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám t...
+
+
+          https://www.meetup.com/czskppug/events/290709907/'
+        location: Microsoft (Vyskočilova 1561/4a, Praha 4, Czech Republic 140 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290709907@meetup.com
+        url: https://www.meetup.com/czskppug/events/290709907/
+        dtstart: 2023-07-13 17:00:00+02:00
+        dtend: 2023-07-13 19:00:00+02:00
