--- a/data/sources/gdg-ostrava.yaml
+++ b/data/sources/gdg-ostrava.yaml
@@ -70299,3 +70299,27 @@ series:
         url: https://www.meetup.com/gdg-ostrava/events/284926288/
         dtstart: 2022-05-11 16:00:00+02:00
         dtend: 2022-05-11 19:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: I/O 2022 Extended Ostrava Meetup
+        description: 'GDG Ostrava
+
+          Wednesday, May 11 at 4:00 PM
+
+
+          THIS IS A FREE EVENT - PLEASE FINISH YOUR RSVP IN THE LINK BELOW <br/>https://gdg.community.dev/events/details/google-gdg-ostrava-presents-io-2022-ext...
+
+
+          https://www.meetup.com/gdg-ostrava/events/284926288/'
+        location: Online event
+        geo:
+          lat: 49.83
+          lon: 18.27
+        status: CONFIRMED
+        uid: event_284926288@meetup.com
+        url: https://www.meetup.com/gdg-ostrava/events/284926288/
+        dtstart: 2022-05-11 16:00:00+02:00
+        dtend: 2022-05-11 19:00:00+02:00
