--- a/data/sources/datascript-morning-talks.yaml
+++ b/data/sources/datascript-morning-talks.yaml
@@ -53174,3 +53174,27 @@ series:
         url: https://www.meetup.com/morning-talks/events/291952853/
         dtstart: 2023-03-08 09:00:00+01:00
         dtend: 2023-03-08 10:00:00+01:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: Apache Kafka (nejenom) v aplikacích založených na mikroslužbách
+        description: 'Morning Talks
+
+          Wednesday, March 8 at 9:00 AM
+
+
+          Prosíme o registraci přímo na stránkách Datascriptu, děkujeme za pochopení.https://www.datascript.cz/morning-talks/apache-kafka-nejenom-v-aplikacich-z...
+
+
+          https://www.meetup.com/morning-talks/events/291952853/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_291952853@meetup.com
+        url: https://www.meetup.com/morning-talks/events/291952853/
+        dtstart: 2023-03-08 09:00:00+01:00
+        dtend: 2023-03-08 10:00:00+01:00
