--- a/data/sources/czskppug.yaml
+++ b/data/sources/czskppug.yaml
@@ -28559,7 +28559,7 @@ series:
         dtend: 2023-03-09 19:00:00+01:00
   - meetupcom:
       meta_description: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p
-      og_title: CZSK PPUG Meetup, Thu, Apr 13, 2023, 5:00 PM   | Meetup
+      og_title: CZSK PPUG Meetup, Thu, Apr 13, 2023, 11:00 PM   | Meetup
       url: https://www.meetup.com/czskppug/events/290709869/
       ical:
         summary: CZSK PPUG Meetup
@@ -29183,7 +29183,7 @@ series:
         dtend: 2022-12-08 19:00:00+01:00
   - meetupcom:
       meta_description: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p
-      og_title: CZSK PPUG Meetup, Thu, May 11, 2023, 5:00 PM   | Meetup
+      og_title: CZSK PPUG Meetup, Thu, May 11, 2023, 11:00 PM   | Meetup
       url: https://www.meetup.com/czskppug/events/290709899/
       ical:
         summary: CZSK PPUG Meetup
@@ -31151,7 +31151,7 @@ series:
         dtend: 2023-01-12 19:00:00+01:00
   - meetupcom:
       meta_description: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p
-      og_title: CZSK PPUG Meetup, Thu, Jun 8, 2023, 5:00 PM   | Meetup
+      og_title: CZSK PPUG Meetup, Thu, Jun 8, 2023, 11:00 PM   | Meetup
       url: https://www.meetup.com/czskppug/events/290709903/
       ical:
         summary: CZSK PPUG Meetup
@@ -33095,7 +33095,7 @@ series:
         dtend: 2023-02-09 19:00:00+01:00
   - meetupcom:
       meta_description: Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám to někde reálně běží, p
-      og_title: CZSK PPUG Meetup, Thu, Jul 13, 2023, 5:00 PM   | Meetup
+      og_title: CZSK PPUG Meetup, Thu, Jul 13, 2023, 11:00 PM   | Meetup
       url: https://www.meetup.com/czskppug/events/290709907/
       ical:
         summary: CZSK PPUG Meetup
@@ -33117,6 +33117,30 @@ series:
         url: https://www.meetup.com/czskppug/events/290709907/
         dtstart: 2023-07-13 17:00:00+02:00
         dtend: 2023-07-13 19:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: CZSK PPUG Meetup
+        description: 'Czech and Slovak Power Platform User Group
+
+          Thursday, March 9 at 5:00 PM
+
+
+          Pojďme se pravidelně potkávat a sdílet zkušenosti z Power Platformy, co nás na ní baví, co nás trápí a co nového zajímavého přichází. A pokud už nám t...
+
+
+          https://www.meetup.com/czskppug/events/290709864/'
+        location: Microsoft (Vyskočilova 1561/4a, Praha 4, Czech Republic 140 00)
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_290709864@meetup.com
+        url: https://www.meetup.com/czskppug/events/290709864/
+        dtstart: 2023-03-09 17:00:00+01:00
+        dtend: 2023-03-09 19:00:00+01:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
