--- a/data/sources/gdg-ostrava.yaml
+++ b/data/sources/gdg-ostrava.yaml
@@ -67661,7 +67661,7 @@ series:
 
 
         - Jak na Googl'
-      og_title: WTM IWD 2023, Sat, Mar 18, 2023, 9:30 AM   | Meetup
+      og_title: WTM IWD 2023, Sat, Mar 18, 2023, 2:30 PM   | Meetup
       url: https://www.meetup.com/gdg-ostrava/events/291382153/
       ical:
         summary: WTM IWD 2023
@@ -68667,6 +68667,30 @@ series:
         url: https://www.meetup.com/gdg-ostrava/events/278023608/
         dtstart: 2021-06-02 18:00:00+02:00
         dtend: 2021-06-02 21:00:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: I/O 2022 Extended Ostrava Meetup
+        description: 'GDG Ostrava
+
+          Wednesday, May 11 at 4:00 PM
+
+
+          THIS IS A FREE EVENT - PLEASE FINISH YOUR RSVP IN THE LINK BELOW <br/>https://gdg.community.dev/events/details/google-gdg-ostrava-presents-io-2022-ext...
+
+
+          https://www.meetup.com/gdg-ostrava/events/284926288/'
+        location: Online event
+        geo:
+          lat: 49.83
+          lon: 18.27
+        status: CONFIRMED
+        uid: event_284926288@meetup.com
+        url: https://www.meetup.com/gdg-ostrava/events/284926288/
+        dtstart: 2022-05-11 16:00:00+02:00
+        dtend: 2022-05-11 19:00:00+02:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
