--- a/data/sources/gdg-prague.yaml
+++ b/data/sources/gdg-prague.yaml
@@ -24705,7 +24705,7 @@ series:
         http://gdg-garage.github.io/
 
         '
-      og_title: GDG Garage Prague One, Tue, Mar 14, 2023, 6:30 PM   | Meetup
+      og_title: GDG Garage Prague One, Tue, Mar 14, 2023, 11:30 PM   | Meetup
       url: https://www.meetup.com/gdgprague/events/xqcsqsyfcfbsb/
       ical:
         summary: GDG Garage Prague One
@@ -25725,7 +25725,7 @@ series:
         http://gdg-garage.github.io/
 
         '
-      og_title: GDG Garage Prague One, Tue, Mar 28, 2023, 6:30 PM   | Meetup
+      og_title: GDG Garage Prague One, Wed, Mar 29, 2023, 12:30 AM   | Meetup
       url: https://www.meetup.com/gdgprague/events/xqcsqsyfcfblc/
       ical:
         summary: GDG Garage Prague One
@@ -26673,7 +26673,7 @@ series:
         http://gdg-garage.github.io/
 
         '
-      og_title: GDG Garage Prague One, Tue, Apr 11, 2023, 6:30 PM   | Meetup
+      og_title: GDG Garage Prague One, Wed, Apr 12, 2023, 12:30 AM   | Meetup
       url: https://www.meetup.com/gdgprague/events/xqcsqsyfcgbpb/
       ical:
         summary: GDG Garage Prague One
@@ -27669,7 +27669,7 @@ series:
         http://gdg-garage.github.io/
 
         '
-      og_title: GDG Garage Prague One, Tue, Apr 25, 2023, 6:30 PM   | Meetup
+      og_title: GDG Garage Prague One, Wed, Apr 26, 2023, 12:30 AM   | Meetup
       url: https://www.meetup.com/gdgprague/events/xqcsqsyfcgbhc/
       ical:
         summary: GDG Garage Prague One
@@ -27691,6 +27691,30 @@ series:
         url: https://www.meetup.com/gdgprague/events/xqcsqsyfcgbhc/
         dtstart: 2023-04-25 18:30:00+02:00
         dtend: 2023-04-25 20:30:00+02:00
+  - meetupcom:
+      meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
+      og_title: Login to Meetup | Meetup
+      url: https://www.meetup.com/login/
+      ical:
+        summary: GDG Garage Prague One
+        description: 'GDG Prague
+
+          Tuesday, February 28 at 6:30 PM
+
+
+          • How to join?Online only because of covid https://discord.gg/TnaMJMyTDw • What we''ll dohttps://sites.google.com/site/garagepragueone/home...
+
+
+          https://www.meetup.com/gdgprague/events/291492945/'
+        location: Online event
+        geo:
+          lat: 50.08
+          lon: 14.43
+        status: CONFIRMED
+        uid: event_xqcsqsyfcdblc@meetup.com
+        url: https://www.meetup.com/gdgprague/events/291492945/
+        dtstart: 2023-02-28 18:30:00+01:00
+        dtend: 2023-02-28 20:30:00+01:00
   - meetupcom:
       meta_description: Find groups that host online or in person events and meet people in your local community who share your interests.
       og_title: Login to Meetup | Meetup
